Fix uploaded file name line break in firefox

--- a/src/steps/UploadView/styles.module.css
+++ b/src/steps/UploadView/styles.module.css
@@ -56,4 +56,5 @@
 
 .file > :last-child {
     cursor: pointer;
+    word-break: break-all;
 }
